# Convergence

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DYNAMICS.md  Dockerfile  ENGINEERING.md  FRAGMENTS.md  HIERARCHY.md  INTENT.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
convergence/: behaviors.py  coercion_grammar.py  composition.py  conversation.py  corpus.py  engine.py  evaluation.py  investigator.py  narration.py  records.py  text.py
convergence/adapters/: anthropic_llm.py  antigravity_cli_llm.py  gemini_cli_llm.py  gemini_llm.py  grok_llm.py  openai_llm.py
convergence/layers/: cross_channel.py  domain_convergence.py  gap_detector.py  pattern_detector.py  phrase_fragmentation.py  third_party.py
data/: adv_interleaved_threads.json  adv_mixed_senders.json  adv_reversed_chronology.json  adv_subject_mismatch.json  adv_unrelated_contamination.json  channels_casual.json  channels_formal.json  coercion_grammar_thread.json  coparenting_exhibit.json  coparenting_full.json  coparenting_records.json  dyn_coercive.json  dyn_conflicted.json  dyn_cooperative.json  dyn_high_conflict.json  dyn_parallel.json  sample_exhibit.json  sample_full.json  sample_records.json
data/holdout/: hold_coercive.json  hold_cooperative.json
data/regression/: reg_camp_hostile.json  reg_coercive.json  reg_hostile.json  reg_religion_hostile.json  reg_relocation_coercive.json  reg_relocation_cooperative.json  reg_relocation_hostile.json
docs/: ARCHITECTURE.md  ui-how-to-research.md
docs/plans/: 2026-06-30-engine-recall-fix-plan.md  2026-06-30-phase-0-foundation-hardening-plan.md  2026-06-30-phase-1-signal-provenance-plan.md  2026-06-30-phase-2-coercion-state-machine-plan.md  2026-06-30-phase-3-evaluation-honesty-plan.md  2026-06-30-phase-4-engine-ui-separation-plan.md  2026-06-30-refusal-justify-iteration-plan.md  2026-06-30-refusal-vocabulary-iteration-plan.md
docs/specs/: 2026-06-30-engine-recall-fix-design.md  2026-06-30-phase-0-foundation-hardening-design.md  2026-06-30-phase-1-signal-provenance-design.md  2026-06-30-phase-2-coercion-state-machine-design.md  2026-06-30-phase-3-evaluation-honesty-design.md  2026-06-30-phase-4-engine-ui-separation-design.md  2026-06-30-refusal-justify-iteration-design.md  2026-06-30-refusal-vocabulary-iteration-design.md
tests/: test_adversarial_corpora.py  test_behaviors.py  test_channels_corpus.py  test_coercion_grammar.py  test_composition.py  test_conversation.py  test_coparenting_corpus.py  test_cross_channel.py  test_demo_cli.py  test_domain_convergence.py  test_dynamics_corpora.py  test_engine.py  test_engine_page_contract.py  test_evaluation.py  test_fragments_doc.py  test_gap_detector.py  test_hierarchy_doc.py  test_holdout_corpora.py  test_intent_doc.py  test_investigator.py  test_llm_adapter.py  test_narration.py  test_pattern_detector.py  test_phrase_fragmentation.py  test_records.py  test_regression_corpora.py  test_signal_provenance.py  test_text.py  test_third_party.py  test_thread_locality.py  test_web_build.py  test_web_serialize.py  test_web_server.py  test_web_ui_contract.py  test_web_ui_verification.py
tools/: generate_dynamics.py
web/: VERIFICATION.md  __init__.py  build.py  curated.py  serialize.py  server.py
web/site/: app.js  engine.css  engine.html  engine.js  index.html  style.css
web/site/data/: channels.json  contractor.json  coparenting.json  dynamics.json  index.json
