[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "convergence"
version = "0.1.0"
description = "A corroboration-first communication-forensics engine: findings elevate only when independent layers converge."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "The Convergence Authors" }]
keywords = ["forensics", "nlp", "communication-analysis", "corroboration", "deterministic", "auditability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []  # the engine core is stdlib-only by design

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.6", "mypy>=1.8"]
llm = ["anthropic>=0.40", "openai>=1.0"]  # only needed for optional conversational narration

[project.scripts]
convergence = "demo:main"               # narrated CLI walkthrough (--corpus, --chat, ...)
convergence-web = "web.server:main"     # local frontend at http://127.0.0.1:8765/
convergence-build = "web.build:main"    # write web/site/data/*.json for static hosting

[project.urls]
Homepage = "https://github.com/dsmcewan/convergence"
Source = "https://github.com/dsmcewan/convergence"

[tool.setuptools]
py-modules = ["demo"]                    # demo.py is a top-level module, not a package

[tool.setuptools.packages.find]
include = ["convergence*", "web*"]       # web/ ships too so `import web` works after install

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
"tests/*" = ["E402"]      # tests may import after small setup

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
# ratchet (enable in a later phase): disallow_untyped_defs, disallow_any_generics,
# warn_return_any, strict_equality.

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "google.*", "pexpect.*", "wexpect.*", "winpty.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["convergence", "web"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
